fix: product modal size on mobile

--- a/src/components/ProductModal/ProductModal.module.scss
+++ b/src/components/ProductModal/ProductModal.module.scss
@@ -48,6 +48,7 @@
 @media screen and (max-width: 700px) {
 	.body {
 		padding: var(--s-3);
+		width: 95%;
 	}
 
 	.dialog {
